css/styles.css
/* ... */
/* Buttons */

/* Typography */
h1 {
    margin-top: 80px;
    font-family: 'AntennaCond-Bold', sans-serif;
    color: #1b7cff;
	margin-bottom: 20px;
}

h2 {
    font-family: 'AntennaCond-Bold', sans-serif;
    color: #1b7cff;
}

h3 {
    font-size: 28px;
    font-family: 'AntennaCond-Bold', sans-serif;
    color: #1b7cff;
}

.text-primary {
    color: #090a0a;
    font-size: 20px;
    line-height: 30px;
}

.text-primary-reverse {
    color: #fff;
    font-size: 20px;
    line-height: 30px;
}

.text-info {
    color: #090a0a;
    font-size: 16px;
    line-height: 28px;
}

.text-muted {
    font-size: 16px;
    line-height: 26px;
    color: #ddd;
}

/* Typography */

/* Modal Popup */
	
.modal {
  top: 40px;
}

.modal-content {
    border-radius: 0;
}

.modal-header {
    border-bottom: 0px;
}

/* Modal Popup */

/* Navigation */
.navbar {
    background-color: #fff;
    font-family: 'Montserrat-Bold', sans-serif;
    font-weight: bold;
    color: #1b7cff;
    border-radius: 0;
}

.navbar .fa {
    color: #000;
}

.navbar-brand {
    font-family: 'AntennaCond-Bold', sans-serif;
    color: #1b7bff;
}

.nav>li>a {
    padding: 15px 10px;
    color: #1b7bff;
}
.nav>li>a:hover {
    color: #484e5d;
}
.icon-bar {
    background-color: none;
	margin-top:50px;
	margin-bottom:50px;
}

@media (min-width: 768px) {
    #navbar {
        float: right;
    }
}

/* Navigation */

/* Jumbotron */

.jumbotron {
    padding-top: 80px;
    padding-bottom: 0;
    margin-bottom: 0;
    min-height: 590px;
}
    
.jumbotron .h1, .jumbotron h1 {
    font-size: 46px;
    line-height: 50px;
    margin-top: 20px;
    color: #1b7cff;
    font-family: 'AntennaCond-Bold', sans-serif;
}

.jumbotron span {
    line-height: 40px;
}

.bbe-awesome-image {
    background: url('../images/awsome_image.jpg') no-repeat;
        background-position: 50% 31%;
    background-size: cover;
}

/* Jumbotron */

/* CTA Build more awesome */
.high-velocity {
    background-color: #efefef;
}

.high-velocity .text-primary {
    color: #090a0a;
    font-size: 20px;
    line-height: 30px;
    font-weight: 600;
}

.cta {
    background-color: #1b7cff;
    min-height: 60px;
    color: #fff;
}

.cta .bbe-cta-title {
    margin-right: 12px;
}

.high-velocity .row:first {
    height: 100%;
}
/* CTA Build more awesome */

/* High velocity */

.bbe-high-velocity {
    margin-bottom: 80px;   
}

.bbe-thumbnail {
        height: 187px;
    width: 292px;  
}


.img-technology {
    background: url('../images/tech-icon.jpg') no-repeat top center #fafafa;
}

.img-technology:hover {
    background: url('../images/tech-icon.jpg') no-repeat bottom center #1d7bff;
}

.img-methodology {
    background: url('../images/method-icon.jpg') no-repeat top center #fafafa;
	border-left: 1px solid #ddd;
}

.img-methodology:hover {
    background: url('../images/method-icon.jpg') no-repeat bottom center #1d7bff;
	border-left: 1px solid #ddd;
}

.img-infrastructure {
    background: url('../images/infa-icon.jpg') no-repeat top center #fafafa;
	border-left: 1px solid #ddd;
}

.img-infrastructure:hover {
    background: url('../images/infa-icon.jpg') no-repeat bottom center #1d7bff;
	border-left: 1px solid #ddd;
}

.img-culture {
    background: url('../images/culture-icon.png') no-repeat top center #f7f7f7;
	border-left: 1px solid #ddd;
}

.img-culture:hover {
    background: url('../images/culture-icon.png') no-repeat bottom center #1d7bff;
	border-left: 1px solid #ddd;
}

.bbe-high-velocity-content {
    display: none;
}

.bbe-high-velocity .technology .bbe-high-velocity-technology,
.bbe-high-velocity .methodology .bbe-high-velocity-methodology,
.bbe-high-velocity .infrastructure .bbe-high-velocity-infrastructure,
.bbe-high-velocity .culture .bbe-high-velocity-culture {
    display: block;
}

.technology .bbe-thumbnail {
    float: left;
}

/* High velocity */

.high-velocity .btn-lg {
    border: 2px solid #F86465;
    color: #F86465;
}


/* Earth Quote */

.bbe-earth-image {
    background: url('../images/earth_image.jpg') no-repeat;
    background-position: 50% 50%;
    background-size: cover;
    min-height: 500px;
    background-attachment: fixed;
}

.bbe-earth-image h1 {
    color: #fff;
    font-size: 36px;
    margin-top: 130px;
}

/* Earth Quote */

/* Our Team */
.bbe-team {
    margin-bottom: 80px;    
}

.bbe-team h3 {
    margin-top: 35px;
    font-size: 20px;
}

.bbe-team .bbe-team-para2 {
    margin-top: 60px;
}
.bbe-team .bbe-team-cta {
    background-color: #00d8b2;
	height: 263px;
    width: 263px;
}

.bbe-team-cta img{
	display: block;
    margin: 0px auto;
}

.bbe-team-cta .btn {
    background-color: #00d8b2;
}

.bbe-team .text-info {
    margin-bottom: 35px;
}

.bbe-team h4 {
    font-size: 16px;
    color: #888888;
}

.bbe-team .fa {
    color: #1b7cff;
}

.bbe-team .btn-lg {
	width: 100%;
	height: 263px;
    padding-top: 45%;
}
/* Our Team */

/* Client logos */
.bbe-client-logo .bbe-client-title {
    background-color: #1b7cff;
    height: 278px;
}

.bbe-client-logo .bbe-client-title h3 {
     font-size: 22px;
     color: #fff;  
     padding-top: 62px;
}

.bbe-client-title .btn-lg {
    border: 2px solid #fff;
    color: #fff;
    margin-bottom: 50px;
}

.owl-carousel {
    display: none;
    position: relative;
    width: 100%;
    -ms-touch-action: pan-y;
    margin-top: 45px;
}

.owl-theme .owl-controls .owl-page span{background: #ffffff;}

.bbe-container {
    height: 278px;
	background-color: #f96566;
}

/*.bbe-client-logo .bbe-logos {
    overflow-x: auto;
    padding-top: 62px;
}*/

.bbe-logos {
    position: relative;
    min-height: 200px;
}


#owl-demo .item{
  margin: 3px;
}
#owl-demo .item img{
  display: block;
  width: 70%;
  height: auto;
}
/*.bbe-logos .item {
    position: absolute;
}*/

/* Client logos */

/* Our work */

.bbe-our-work {
    margin-bottom: 80px;
}

.bbe-our-work .btn-info {
    border: #F86465 2px solid;
    color: #F86465;
}
/* ... */

